--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.5",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "graphql": "^16.9.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
