--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "graphql": "^16.9.0",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
