--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "graphql": "^16.9.0",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
@@ -41,7 +42,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
-    "vite": "^5.3.4",
+    "vite": "^5.4.2",
     "vitest": "^2.0.5"
   }
 }
