--- a/server/package.json
+++ b/server/package.json
@@ -17,11 +17,15 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
+    "form-data": "^4.0.0",
     "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "mongoose": "^8.6.0"
+    "mailgun-js": "^0.22.0",
+    "mailgun.js": "^10.2.3",
+    "mongoose": "^8.6.0",
+    "nodemailer": "^6.9.15"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
