--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@apollo/server": "^4.11.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "form-data": "^4.0.0",
     "graphql": "^16.9.0",
