--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.0",
     "styled-components": "^6.1.12"
   },
